Improve visibility of select fields in dark theme. Fix #11730

--- a/src/usr/local/www/css/pfSense-dark.css
+++ b/src/usr/local/www/css/pfSense-dark.css
@@ -246,6 +246,10 @@ caption {
     background-color: #e0e0e0;
 }
 
+select.form-control:focus {
+    background-color: #fff;
+}
+
 .form-group {
     border-bottom: 1px solid #212121;
 }
